--- a/auctions/templates/base.html
+++ b/auctions/templates/base.html
@@ -47,9 +47,9 @@
 		<div id="navbar">
 			<table width="600" border="0" style="padding-top: 5px; font-size:14px;" class="center">
 				<tr height="25" >
-					<td width="70"><a href="#">Home</a</td>
-					<td width="70"><a href="#">About Us</a</td>
-					<td width="70"><a href="#">Contact</a</td>
+					<td width="70"><a href="/home/">Home</a</td>
+					<td width="70"><a href="/about/">About Us</a</td>
+					<td width="70"><a href="/contact/">Contact</a</td>
 				</tr>
 			</table>
 		</div>
