ajax no auction

--- a/auctions/templates/auction.html
+++ b/auctions/templates/auction.html
@@ -11,17 +11,35 @@
 			{
 				var date = new Date($("#date_end").html().replace(".","")); 
 				$('#countdown').countdown({until: date}); 
+				$("#bid").click(function(e)
+				{
+					var a = confirm("You're about to place a bid of "+$("#id_value").val()+" pounds. Are you sure?");
+					if(a)
+					{
+						var form = $(this).parent();
+						$.post( "/auction/"+$("#auction_id").val()+"/", 
+							form.serialize(),
+							function( data ) {
+	  						$("#success").html(data);
+	  						
+						}).fail(function(){
+							$("#success").html("Your bid could not be placed, try again. :(");
+						});
+					}
+					else
+						$("#success").html("Bid cancelled.");
+					e.preventDefault();
+				});
 			});
+
 		</script>
 {% endblock %}
 {% block content %}
-
+<input type="hidden" id="auction_id" value="{{auction.id}}"/>
 {% if invalid_auction %}
 <h1>Invalid Auction</h1>
 <p>You are trying to view an invalid auction. Try another one.</p>
 {% else %}
-<<<<<<< HEAD
-=======
 
 {% if invalid_bid %}
 <h1>Invalid Bid</h1>
@@ -32,8 +50,7 @@
 <h1>Invalid Bid</h1>
 <p>{{error}}</p>
 {% endif %}
-
->>>>>>> 7ca3cc46096f8f55b48c82dd208ac5feccf66702
+<div style="float:left;width:300px;height:150px;">IMAGE	</div>
 <h1>{{auction.auctioneer}} is selling one {{auction.product.title}}</h1>
 
 <p>This is a {{auction.get_type_name}}</p>
@@ -62,7 +79,12 @@
     {% if auction.winning_bid %}<p><b>Current bid: </b>&pound;{{auction.winning_value}}</p>{% else %}<p><b>No bid so far</b></p>{% endif %}
   {% endif %}
   <h2>Bid now!</h2>
-  		<form id="bid_now" method="post" action="/auction/{{auction.id}}/">{% csrf_token %}{{ form.as_p }}<input type="submit" name="submit" value="Bid"></form>
+  <form method="POST" action="">
+  	{% csrf_token %}
+  		{{ form.as_p }}
+  		<input id="bid" type="submit" name="submit" value="Bid">
+  		<div id="success"></div>
+  </form>
 {% endif %}
 
 {% endif %}
