--- a/auctions/templates/base.html
+++ b/auctions/templates/base.html
@@ -17,11 +17,11 @@
 				<tr height="60">
 					<td id="logo"><center><a href="/home/"> <img src="{% static "css/logo.png" %}" style="margin-top:-12px;" /></a></center></td>
 					<td id="search">
-						<form>
+						<form method="post" action="/search/">{% csrf_token %}
 							<table style="width: 100%;">
 								<tr>
 									<td width="70" align="right"> <text> Search </text> </td>
-									<td><input class="input-text" type="text" id="search-input" style="width:95%;"/></td>
+									<td><input class="input-text" type="text" id="term" name="term" style="width:95%;"/></td>
 									<td width="50" align="left"><input type="submit" value="Go" class=/> </td>
 								</tr>
                                 <tr><td>&nbsp;</td></tr>
