--- a/auctions/templates/create_auction.html
+++ b/auctions/templates/create_auction.html
@@ -19,7 +19,7 @@
 	{% csrf_token %}
 	<fieldset id="product_info">
 		<legend>Product Information</legend>
-		<table>
+		<table class="table-form">
 			<tr>
 				<td>Category:
 				</td>
@@ -44,7 +44,7 @@
 	</fieldset>
 	<fieldset id="auction_info" style="display:none">
 		<legend>Auction Information</legend>
-		<table>
+		<table class="table-form">
 	       <tr>
 	         <td>Type:
 	         </td>
@@ -70,7 +70,7 @@
 	</fieldset>
 	<fieldset id="confirmation" style="display:none">
 		<legend>Confirmation</legend>
-		<table>
+		<table class="table-form">
 			<tr>
 				<td>Product Category:
 				</td>
