--- a/auctions/templates/about.html
+++ b/auctions/templates/about.html
@@ -3,17 +3,16 @@
 {% block content %}
 
  <h1> About us </h1>
-	<p>AuctionZ Corporation is an easy way of selling and purchasing products online.<br>
-	We offer a variety of auction types, such as British, Sealed, and Vickrey auctions.</p>
 
-	<p>We developed this website to help people all over the world to buy and sell products in a fast and efficient way,
-	<br>furthermore, different auctions can be chosen to fit the custumer's needs.</p>
+<div width="100" style="witdh=100px;">
 
-	<p>Since its foundation in 2013, AuctionZ has done many investments in the website security and reliability of<br>
-	its auctions and many more improvements are coming.</p>
+	<p align="justify">AuctionZ Corporation is an easy way of selling and purchasing products online. We offer a variety of auction types, such as British, Sealed, and Vickrey auctions.</p>
 
-	<p>At last but not least, we always aim for the users's needs and satisfaction. Join us, create your account free<br>
-	and make part of our network of sellers and buyers.<br><br></p>
+	<p align="justify">We developed this website to help people all over the world to buy and sell products in a fast and efficient way, furthermore, different auctions can be chosen to fit the custumer's needs.</p>
+
+	<p align="justify">Since its foundation in 2013, AuctionZ has done many investments in the website security and reliability of its auctions and many more improvements are coming.</p>
+
+	<p align="justify">At last but not least, we always aim for the users's needs and satisfaction. Join us, create your account free and make part of our network of sellers and buyers.<br><br></p>
 
 	<h1>Team</h1>
 
@@ -29,6 +28,8 @@
 	<p>Web-designer<br><br></p>
 	<b><p>Matheus Garay</p></b>
 	<p>Web-designer<br><br></p>
+    
+    </div>
 
     
 {% endblock %}  
