--- a/auctions/templates/404.html
+++ b/auctions/templates/404.html
@@ -2,6 +2,9 @@
 {% block title %} Error 404 {% endblock %}
 {% block content %}
 
-<h1> Error 404 </h1>
+<h1> Error 404: Page not Found </h1>
+
+<p> Sorry, but the page you are looking for has not been found.</p>
+<p>Try checking the URL for errors, then press the refresh button on your browser </p>
 
 {% endblock %}
