--- a/auctions/templates/500.html
+++ b/auctions/templates/500.html
@@ -2,6 +2,13 @@
 {% block title %} Error 500 {% endblock %}
 {% block content %}
 
-<h1> Error 500 </h1>
+<h1> Error 500 - Internal Error </h1>
+
+<p> The server encountered an internal error or misconfiguration and was unable
+to complete your request.<p/>
+
+<p> Please contact the website administrators and inform them of the time the error occurred, and anything you might have
+done that may have caused the error.</p>
+
 
 {% endblock %}
