Footer and Register css

--- a/auctions/templates/base.html
+++ b/auctions/templates/base.html
@@ -92,6 +92,6 @@
 			</div>
 			<div id="content"> {% block content %} {% endblock %} </div>
 		</div>
-		<div id="footer">{% block footer %}{% endblock %}</div>
+		<div id="footer">{% block footer %} <p align="center"> <a href="/home/">Home</a> &nbsp;&nbsp;<a href="/about/">About Us</a> &nbsp;&nbsp; <a href="/contact/">Contact</a> &nbsp;&nbsp; | &nbsp;&nbsp; Copyright © 2013-2014 AuctionZ Corporation. All Rights Reserved. </p> {% endblock %}</div>
 	</body>
 </html>
