--- a/auctions/templates/about.html
+++ b/auctions/templates/about.html
@@ -4,8 +4,6 @@
 
  <h1> About us </h1>
 
-<div width="100" style="witdh=100px;">
-
 	<p align="justify">AuctionZ Corporation is an easy way of selling and purchasing products online. We offer a variety of auction types, such as British, Sealed, and Vickrey auctions.</p>
 
 	<p align="justify">We developed this website to help people all over the world to buy and sell products in a fast and efficient way, furthermore, different auctions can be chosen to fit the custumer's needs.</p>
@@ -16,20 +14,28 @@
 
 	<h1>Team</h1>
 
-	<b><p>Renan Gomes</p></b>
-	<p>Designer Director<br><br></p>
-	<b><p>Vitor Torreao</p></b>
-	<p>Programmer Leader<br><br></p>
-	<b><p>Vitor Antero</p></b>
-	<p>CEO<br><br></p>
-	<b><p>Mauricio Carvalho</p></b>
-	<p>Web-designer<br><br></p>
-	<b><p>Matheus Beleboni</p></b>
-	<p>Web-designer<br><br></p>
-	<b><p>Matheus Garay</p></b>
-	<p>Web-designer<br><br></p>
-    
-    </div>
+    <table width="600" id="about">
+        <tr>
+            <td><b><p><a href="mailto:a@a.com">Renan Gomes</a></p></b>
+                <p>Designer Director<br><br></p></td>
+            <td><b><p><a href="mailto:a@a.com">Vitor Torreao</a></p></b>
+                <p>Programmer Leader<br><br></p></td>
+        </tr>
+        <tr>
+            <td><b><p><a href="mailto:a@a.com">Vitor Antero</a></p></b>
+                <p>CEO<br><br></p></td>
+            <td><b><p><a href="mailto:a@a.com">Mauricio Carvalho</a></p></b>
+                <p>Web-designer<br><br></p></td>
+        </tr>
+        <tr>
+            <td><b><p><a href="mailto:a@a.com">Matheus Beleboni</a></p></b>
+                <p>Web-designer<br><br></p></td>
+            <td><b><p><a href="mailto:a@a.com">Matheus Garay</a></p></b>
+                <p>Web-designer<br><br></p>
+            </td>
+        </tr>
+        
+    </table>
 
     
 {% endblock %}  
