created form in contacts.html

--- a/auctions/templates/about.html
+++ b/auctions/templates/about.html
@@ -16,18 +16,18 @@
 
 	<h1>Team</h1>
 
-	<b><p>Renan Gomes</p></b>
-	<p>Designer Director<br><br></p>
-	<b><p>Vitor Torreao</p></b>
-	<p>Programmer Leader<br><br></p>
 	<b><p>Vitor Antero</p></b>
 	<p>CEO<br><br></p>
+	<b><p>Vitor Torreao</p></b>
+	<p>Programmer Leader<br><br></p>
 	<b><p>Mauricio Carvalho</p></b>
-	<p>Web-designer<br><br></p>
+	<p>Front-end Developer<br><br></p>
 	<b><p>Matheus Beleboni</p></b>
-	<p>Web-designer<br><br></p>
+	<p>Front-end Developer<br><br></p>
+	<b><p>Renan Gomes</p></b>
+	<p>Designer Director<br><br></p>
 	<b><p>Matheus Garay</p></b>
-	<p>Web-designer<br><br></p>
+	<p>Front-end Developer<br><br></p>
     
     </div>
 
