--- a/auctions/templates/base.html
+++ b/auctions/templates/base.html
@@ -20,9 +20,8 @@
 						<form method="post" action="/search/">{% csrf_token %}
 							<table style="width: 100%;">
 								<tr>
-									<td width="70" align="right"> <text> Search </text> </td>
-									<td><input class="input-text" type="text" id="term" name="term" style="width:95%;"/></td>
-									<td width="50" align="left"><input type="submit" value="Go" class=/> </td>
+									<td><input placeholder="Search" class="input-text" type="text" id="term" name="term" style="width:100%;"/></td>
+									<td width="50" align="left"><input type="submit" value="Go" style="float:right;"/> </td>
 								</tr>
                                 <tr><td>&nbsp;</td></tr>
 							</table>
